# aic

./: .gitignore  CURRENT_LEARNINGS.md  GPT55_HANDOFF_SUMMARY.txt  pixi.toml  pixi_env_setup.sh  plan.md  plot_logs.py  plot_pid_debug_logs.py  recovery_plan.md  run_eval.sh  run_policy.sh
aic_engine/: CMakeLists.txt  README.md  package.xml
aic_example_policies/: README.md  setup.py
aic_gazebo/: CMakeLists.txt  package.xml
aic_gym_gz/: README.md  __init__.py  audit_runtime.py  benchmark.py  benchmark_teacher_planner.py  compare_reward_to_final_score.py  compare_teacher_replay.py  debug_live_step_probe.py  debug_missing_planner_context.py  debug_openai_planner_payload.py  demo_heuristic_policy.py  demo_live_policy.py  demo_random_policy.py  demo_teacher_history_context.py  demo_teacher_rollout.py  deterministic_policy_parity.py  env.py  evaluate_teacher_replay.py  evaluate_teacher_rollout.py  evaluate_teacher_search.py  export_runtime_checkpoint.py  export_teacher_dataset.py  export_teacher_official_replay.py  io.py  live_benchmark.py  live_training_smoke.py  measure_step_settle.py  official_refs.py  official_scene.py  official_trace.py  parity.py  policies.py  probe_overview_cameras.py  randomizer.py  record_teacher_temporal_diagnostics.py  replay_teacher_artifact.py  replay_trace.py  reward.py  ros_image_file_subscriber.py  run_cheatcode_gym.py  (+16 more)
aic_hybrid_teleop/: package.xml  pixi.toml  setup.cfg  setup.py
aic_teacher_official/: package.xml  pixi.toml  setup.cfg  setup.py
aic_teacher_official/aic_teacher_official/: OfficialTeacherOraclePlanner.py  OfficialTeacherReplay.py  __init__.py  context.py  generate_piecewise.py  iteration.py  postprocess.py  replay.py  review.py  trajectory.py  vlm_planner.py
aic_teacher_official/test/: test_official_teacher_pipeline.py
aic_teacher_official/test/fixtures/: piecewise_trajectory.json
aic_utils/aic_gazebo_env/: INTEGRATION_NOTES.md  README.md  pyproject.toml
aic_utils/aic_gazebo_env/aic_gazebo_env/: __init__.py  action.py  alignment.py  backend.py  discovery.py  env.py  gazebo_client.py  gymnasium_env.py  live_runtime.py  observation.py  official_scoring.py  protocol.py  reward.py  rl.py  runtime.py  task.py  termination.py  transport_bridge.py
aic_utils/aic_gazebo_env/scripts/: live_env_one_step.py  live_joint_bridge_parity.py  live_native_one_step.py  live_native_parity.py  live_phase2_probe.py  live_pose_ids.py  live_state_ids.py  live_transport_benchmark.py  run_live_e2e.py  run_live_parity.py  smoke_constant_action.py  smoke_gazebo_joint_bridge.py  smoke_gazebo_runtime_bridge.py  smoke_random_rollout.py  smoke_reset_step.py  train_sb3_ppo.py
aic_utils/aic_gazebo_env/tests/: test_action.py  test_alignment.py  test_backend_protocol_integration.py  test_discovery.py  test_env.py  test_env_api.py  test_gymnasium_wrapper.py  test_imports.py  test_live_e2e.py  test_live_training_smoke.py  test_minimal_task.py  test_observation.py  test_official_scoring.py  test_persistent_transport.py  test_protocol.py  test_randomization.py  test_reset.py  test_reward_termination.py  test_rl.py  test_runtime.py  test_runtime_fake.py  test_runtime_launch.py  test_runtime_real_bridge.py  test_smoke.py  test_train_script.py  test_transport_bridge_client.py
aic_utils/aic_gazebo_gym/: README.md  pyproject.toml
aic_utils/aic_gazebo_gym/aic_gazebo_gym/: __init__.py  backend.py  env.py  runtime.py  types.py
aic_utils/aic_gazebo_gym/tests/: test_imports.py
aic_utils/aic_gazebo_transport_bridge/: CMakeLists.txt  package.xml
aic_utils/aic_gazebo_transport_bridge/src/: aic_gz_transport_bridge.cc
(+192 files in other folders)
