<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_teacher_official</name>
  <version>0.0.1</version>
  <description>Official teacher trajectory replay pipeline for AIC.</description>
  <maintainer email="team-sprinkle@example.com">Team Sprinkle</maintainer>
  <license>Apache-2.0</license>

  <depend>aic_control_interfaces</depend>
  <depend>aic_model</depend>
  <depend>aic_model_interfaces</depend>
  <depend>aic_task_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
