<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_gazebo_transport_bridge</name>
  <version>0.0.1</version>
  <description>Persistent Gazebo Transport helper for the AIC gym runtime.</description>
  <maintainer email="opensource@intrinsic.ai">Intrinsic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gz_transport_vendor</build_depend>
  <build_depend>gz_msgs_vendor</build_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
